--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
         <version>4.8.0</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-inline</artifactId>
+        <version>5.0.0</version> <!-- O la versión más reciente -->
+        <scope>test</scope>
+    </dependency>
   </dependencies>
 
 <build>
